--- a/src/moneychanger/Widgets/offerdetails.ui
+++ b/src/moneychanger/Widgets/offerdetails.ui
@@ -21,7 +21,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Still Available to Trade:</string>
+          <string>Amount still on Offer:</string>
          </property>
         </widget>
        </item>
@@ -175,6 +175,9 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
+          <widget class="QLineEdit" name="lineEditAcctBalance"/>
+         </item>
+         <item>
           <widget class="QLineEdit" name="lineEditAssetAcctID">
            <property name="enabled">
             <bool>true</bool>
@@ -199,6 +202,9 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QLineEdit" name="lineEditCurrencyBalance"/>
+         </item>
          <item>
           <widget class="QLineEdit" name="lineEditCurrencyAcctID">
            <property name="enabled">
@@ -234,7 +240,14 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="tableWidget">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Completed Trades from this Offer:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QTableWidget" name="tableWidgetTrades">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
@@ -247,6 +260,36 @@
        <height>16777215</height>
       </size>
      </property>
+     <column>
+      <property name="text">
+       <string>Price</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Sold or Purchased</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Received or Paid</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Timestamp</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Trans#</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Server</string>
+      </property>
+     </column>
     </widget>
    </item>
   </layout>
