--- a/src/gui/widgets/compose.ui
+++ b/src/gui/widgets/compose.ui
@@ -29,11 +29,31 @@
    </item>
    <item row="0" column="1" colspan="2">
     <widget class="QPushButton" name="toButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string/>
      </property>
      <property name="flat">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QToolButton" name="toolButtonTo">
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../resource.qrc">
+       <normaloff>:/icons/addressbook</normaloff>:/icons/addressbook</iconset>
      </property>
     </widget>
    </item>
@@ -52,11 +72,31 @@
    </item>
    <item row="1" column="1" colspan="2">
     <widget class="QPushButton" name="fromButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string/>
      </property>
      <property name="flat">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QToolButton" name="toolButtonFrom">
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../resource.qrc">
+       <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
      </property>
     </widget>
    </item>
@@ -73,10 +113,10 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2">
+   <item row="2" column="1" colspan="3">
     <widget class="QLineEdit" name="subjectEdit"/>
    </item>
-   <item row="3" column="0" colspan="3">
+   <item row="3" column="0" colspan="4">
     <widget class="QPlainTextEdit" name="contentsEdit"/>
    </item>
    <item row="4" column="0">
@@ -94,6 +134,12 @@
    </item>
    <item row="4" column="1">
     <widget class="QPushButton" name="viaButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
@@ -105,13 +151,16 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="2">
+   <item row="4" column="2" colspan="2">
     <widget class="QPushButton" name="sendButton">
      <property name="maximumSize">
       <size>
        <width>100</width>
        <height>16777215</height>
       </size>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
       <string>Send</string>
@@ -120,6 +169,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
