--- a/src/gui/widgets/btctransactionmanager.ui
+++ b/src/gui/widgets/btctransactionmanager.ui
@@ -92,8 +92,8 @@
   <widget class="QPushButton" name="buttonRefresh">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>490</y>
+     <x>640</x>
+     <y>480</y>
      <width>151</width>
      <height>27</height>
     </rect>
@@ -105,8 +105,8 @@
   <widget class="QLineEdit" name="editTxCount">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>450</y>
+     <x>640</x>
+     <y>440</y>
      <width>113</width>
      <height>27</height>
     </rect>
@@ -118,14 +118,50 @@
   <widget class="QLabel" name="labelTxCount">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>420</y>
+     <x>640</x>
+     <y>410</y>
      <width>231</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
     <string>Number of transactions to display:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="editSearchTx">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>560</y>
+     <width>421</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelSearchTx">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>540</y>
+     <width>151</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Look up txid:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonSearchTx">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>590</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Show details</string>
    </property>
   </widget>
  </widget>
